<resources>
    <string name="app_name">Popular Movies</string>
    <string name="app_hashtag">#PopularMoviesApp</string>

    <string name="error_fetching_movies">Failed to download</string>
    <string name="error_empty_movies_highest_rated">Can\'t load highest rated movies</string>
    <string name="error_empty_movies_most_popular">Can\'t load most popular movies</string>
    <string name="error_empty_movies_try_again_button">Try again</string>
    <string name="error_empty_favorites_info">You have no favorite movies</string>

    <!-- Detail Fragment layout -->
    <string name="details_rate_format" translatable="false">%.1f/10</string>
    <string name="details_overview_label">Overview</string>
    <string name="details_release_date_label">Release date</string>
    <string name="details_genre_label">Genre</string>
    <string name="details_prod_countries_date_label">Country</string>
    <string name="details_no_info_placeholder">No info</string>

    <string name="details_reviews_label">User reviews (%d)</string>
    <string name="details_reviews_error_label">Can\'t load reviews</string>
    <string name="details_reviews_empty_label">No reviews</string>
    <string name="details_reviews_show_more_label">Show more reviews</string>

    <string name="details_video_label">Videos</string>
    <string name="details_video_error_label">Can\'t load videos</string>
    <string name="details_video_empty_label">No videos</string>

    <!-- Detail Fragment - snackbars -->
    <string name="snackbar_detail_fetching_failed_text">Can\'t reload movie details.</string>
    <string name="snackbar_detail_fetching_failed_action">Retry</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share movie</string>

    <string name="sharing_movie_text">Check out this movie:\n%s\n</string>
    <string name="sharing_toast_no_video">No video to share</string>

    <string-array name="sorting_modes">
        <item>Most popular</item>
        <item>Highest rated</item>
        <item>Favorites</item>
    </string-array>

    <string name="authority" translatable="false">com.shaftapps.pglab.popularmovies</string>

</resources>
