<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detail_review_subheader_text_view"
        style="@style/AppTheme.TextView.Subheader"
        android:layout_marginTop="4dp"
        android:text="@string/details_reviews_label" />


    <com.shaftapps.pglab.popularmovies.widgets.NetworkContentLayout
        android:id="@+id/review_network_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Normal content layout -->
        <LinearLayout
            android:id="@+id/detail_reviews_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/detail_review_item_view"
                layout="@layout/review_item" />

            <Button
                android:id="@+id/detail_reviews_show_more_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/details_reviews_show_more_label"
                android:textColor="@color/accent_color" />

        </LinearLayout>


        <!-- Progress Bar layout -->
        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <!-- Failed loading layout - optional -->
        <TextView
            style="@style/AppTheme.TextView.SecondaryInfo"
            android:text="@string/details_reviews_error_label"
            android:visibility="gone" />


        <!-- Empty state layout - optional -->
        <TextView
            style="@style/AppTheme.TextView.SecondaryInfo"
            android:text="@string/details_reviews_empty_label"
            android:visibility="gone" />


    </com.shaftapps.pglab.popularmovies.widgets.NetworkContentLayout>

</LinearLayout>