<?xml version="1.0" encoding="utf-8"?>
<com.shaftapps.pglab.popularmovies.widgets.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_notifying_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:id="@+id/detail_ratio_wrapper"
            android:layout_width="match_parent"
            android:layout_height="295dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/detail_photo_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="32"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/sample_photo_horizontal" />

                <FrameLayout
                    android:id="@+id/detail_rate_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/details_rate_not_initialized_bg">

                    <TextView
                        android:id="@+id/detail_rate_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:drawableLeft="@drawable/ic_rate_star"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:paddingRight="16dp"
                        android:textColor="?android:textColorPrimary"
                        tools:text="7.5/10" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/detail_titles_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12"
                    android:background="@color/details_title_not_initialized_bg"
                    android:clipToPadding="false"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/detail_movie_title"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingBottom="4dp"
                        android:singleLine="true"
                        tools:text="Movie title" />

                    <TextView
                        android:id="@+id/detail_movie_original_title"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="Movie original title" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="2">

                <com.shaftapps.pglab.popularmovies.widgets.PosterRatioImageView
                    android:id="@+id/detail_poster_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    app:fitToRatio="width"
                    tools:src="@drawable/sample_photo_vertical" />

            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="14sp"
            tools:text="@string/details_release_date_label" />


        <View style="@style/AppTheme.Separator" />


        <!-- OVERVIEW -->

        <TextView
            style="@style/AppTheme.TextView.Subheader"
            android:layout_marginTop="4dp"
            android:text="@string/details_overview_label" />

        <TextView
            android:id="@+id/detail_overview"
            style="@style/AppTheme.TextView.LongText"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." />


        <!-- VIDEOS -->

        <LinearLayout
            android:id="@+id/detail_video_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/AppTheme.Separator"
                android:layout_marginTop="8dp" />

            <TextView
                style="@style/AppTheme.TextView.Subheader"
                android:layout_marginTop="4dp"
                android:text="@string/details_video_label" />

            <!-- Videos go here -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_video_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:background="@color/video_container_bg"
                tools:listitem="@layout/video_list_item" />

        </LinearLayout>


        <!-- REVIEWS -->

        <LinearLayout
            android:id="@+id/detail_reviews_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/AppTheme.Separator"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/detail_review_subheader_text_view"
                style="@style/AppTheme.TextView.Subheader"
                android:layout_marginTop="4dp"
                android:text="@string/details_reviews_label" />

            <TextView
                android:id="@+id/detail_review_empty_state_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="?android:disabledAlpha"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/details_reviews_empty_label" />

            <include
                android:id="@+id/detail_review_item_view"
                layout="@layout/review_item" />

            <Button
                android:id="@+id/detail_reviews_show_more_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/details_reviews_show_more_label"
                android:textColor="@color/accent_color" />

        </LinearLayout>


    </LinearLayout>

</com.shaftapps.pglab.popularmovies.widgets.NotifyingScrollView>